--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Picsum", "Poochie's", "Typer", "Wordle"]
+  "cSpell.words": ["Borhillo", "Picsum", "Poochie's", "Typer", "Wordle"]
 }
