--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Borhillo", "Picsum", "Poochie's", "Typer", "Wordle"]
+  "cSpell.words": ["Borhillo", "Picsum", "Poochie's", "Typer", "Wordle"],
+  "livePreview.defaultPreviewPath": "/05-Introduction-to-CSS/5.3 CSS Selectors/index.html"
 }
