[Project] Color Vocab Website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
-  "cSpell.words": ["Borhillo", "Picsum", "Poochie's", "Typer", "Wordle"],
+  "cSpell.words": [
+    "Azul",
+    "Borhillo",
+    "Picsum",
+    "Poochie's",
+    "Rojo",
+    "Typer",
+    "Wordle"
+  ],
   "livePreview.defaultPreviewPath": "/05-Introduction-to-CSS/5.3 CSS Selectors/index.html"
 }
